updaed parent war pom